# just_one_more

./: .gitignore  README.md  ecosystem.config.js
backend/: .env.example  conftest.py  gunicorn.conf.py  pyproject.toml
backend/apps/analytics/: tests.py  urls.py  views.py
backend/apps/games/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/games/migrations/: 0001_initial.py  0002_initial.py  0003_change_currency_default_to_inr.py  0004_team_teamsuggestion_teammember.py
backend/apps/groups/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/apps/groups/migrations/: 0001_initial.py  0002_initial.py
backend/apps/notifications/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/apps/notifications/migrations/: 0001_initial.py  0002_initial.py
backend/apps/payments/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/payments/migrations/: 0001_initial.py  0002_initial.py
backend/apps/users/: admin.py  managers.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/users/management/commands/: create_sample_users.py
backend/apps/users/migrations/: 0001_initial.py
backend/config/: celery.py  urls.py
backend/config/settings/: base.py  development.py  production.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/public/: sw.js
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  manifest.ts
frontend/src/hooks/: usePushSubscription.ts
(+50 files in other folders)
