[project]
name = "sport-games-organiser-backend"
version = "0.1.0"
description = "Sports Game Organiser - Django REST API backend"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2,<6.0",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "django-cors-headers>=4.3",
    "django-filter>=23.5",
    "psycopg[binary]>=3.1",
    "pillow>=10.3",
    "python-decouple>=3.8",
    "gunicorn>=22.0",
    "pywebpush>=2.0",
    "celery>=5.4",
    "django-celery-beat>=2.6",
    "django-celery-results>=2.5",
    "redis>=5.0",
    "django-anymail[mailgun]>=10.2",
    "whitenoise>=6.6",
    "dj-database-url>=2.1",
]

[tool.uv]
dev-dependencies = [
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "faker>=25.0",
    "black>=24.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "config"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.black]
line-length = 100
target-version = ["py313"]
